Added role based authentication